--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 </head>
 
 <body>
+
+    <!-- NAVBAR-->
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container-fluid">
@@ -26,8 +28,8 @@
                     <form class="d-flex">
                         <input class="form-control me-2" type="search" placeholder="Rechercher..." aria-label="Search">
                         <button class="btn btn-outline-success" type="submit" class="buttonSearch">Rechercher</button>
-                      </form>
-                    
+                    </form>
+
                     <ul class="navbar-nav" class="mr-lg-5">
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#">Dashboard</a>
@@ -49,7 +51,184 @@
 
 
 
-    <script src="" async defer></script>
+    <!-- ARTICLE AVEC CAROUSEL-->
+    <div class="container mt-5 d-flex  align-items-center gx-5" id="article">
+        <div class="d-flex justify-content-start">
+            <div class="row w-100">
+                <div class="col-lg-7">
+                    <h1>NFT MARKETPLACE<br>FOR MANGA</h1>
+                    <p class="gx-3">Le futur est à porté de main</p>
+                    <button class="btn btn-danger" type="submit" class="button1">Explore</button>
+                </div>
+            </div>
+            <div class="col-lg-5 mx-auto" class="carou">
+                <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0"
+                            class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                            aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                            aria-label="Slide 3"></button>
+                    </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="./img/itachi.webp" class="yo" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Itachi</h5>
+                                <p>Some representative placeholder.</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./img/hisoka.jpg" class="yo" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Second slide label</h5>
+                                <p>Some representative placeholder</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./img/hxh.webp" class="yo" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Third slide label</h5>
+                                <p>Some representative placeholder</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!--<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>-->
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <!-- CARD CONTENT -->
+
+    <section id="portfolio" class="py-5">
+        <div class="container-fluid">
+            <h2 class="mb-0 fw-bold">Collection du moment</h2>
+            <div class="row gy-4 gy-md-0 mt-4">
+                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
+                    <div class="card">
+                        <img src="./img/hisoka.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Projet 1</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
+                                sollicitudin.</p>
+                            <a class="btn btn-primary">En savoir plus</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
+                    <div class="card">
+                        <img src="https://picsum.photos/300/150?random=2" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Projet 2</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
+                                sollicitudin.</p>
+                            <a class="btn btn-primary">En savoir plus</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
+                    <div class="card">
+                        <img src="https://picsum.photos/300/150?random=3" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Projet 3</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
+                                sollicitudin.</p>
+                            <a class="btn btn-primary">En savoir plus</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
+                    <div class="card">
+                        <img src="https://picsum.photos/300/150?random=4" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Projet 4</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
+                                sollicitudin.</p>
+                            <a class="btn btn-primary">En savoir plus</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+<!--CARD CONTENT 2-->
+
+    <section id="portfolio" class="py-5">
+        <div class="container-fluid">
+            <h2 class="mb-0 ">Collection Naruto</h2>
+            <div class="row gy-4 gy-md-0 mt-4">
+                <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+                    <div class="card">
+                        <img src="https://picsum.photos/300/150?random=1" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Projet 1</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
+                                sollicitudin.</p>
+                            <a class="btn btn-primary">En savoir plus</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+                    <div class="card">
+                        <img src="https://picsum.photos/300/150?random=2" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Projet 2</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
+                                sollicitudin.</p>
+                            <a class="btn btn-primary">En savoir plus</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+                    <div class="card">
+                        <img src="https://picsum.photos/300/150?random=3" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Projet 3</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
+                                sollicitudin.</p>
+                            <a class="btn btn-primary">En savoir plus</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+                    <div class="card">
+                        <img src="https://picsum.photos/300/150?random=4" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Projet 4</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
+                                sollicitudin.</p>
+                            <a class="btn btn-primary">En savoir plus</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- FOOTER-->
+
+    <footer>
+        
+    </footer>
+
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
