quelque bouton rajouté

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <!-- NAVBAR-->
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark position-sticky">
             <div class="container-fluid">
                 <a href="#"><img class="navbar-brand" src="./img/logoFutur-removebg-preview.png"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -58,7 +58,7 @@
                 <div class="col-lg-7">
                     <h1>NFT MARKETPLACE<br>FOR MANGA</h1>
                     <p class="gx-3">Le futur est à porté de main</p>
-                    <button class="btn btn-danger" type="submit" class="button1">Explore</button>
+                    <button class="btn btn-danger rounded-pill px-4" type="submit" class="button1">Explore</button>
                 </div>
             </div>
             <div class="col-lg-5 mx-auto" class="carou">
@@ -161,12 +161,13 @@
             </div>
         </div>
     </section>
+    <button class="btn btn-danger rounded-pill px-4 m-3 fs-2" type="submit" class="button1">Voir les catégories</button>
 
 <!--CARD CONTENT 2-->
 
     <section id="portfolio" class="py-5">
         <div class="container-fluid">
-            <h2 class="mb-0 ">Collection Naruto</h2>
+            <h2 class="mb-0 fs-1 fw-bold">Collection Naruto</h2>
             <div class="row gy-4 gy-md-0 mt-4">
                 <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
                     <div class="card">
@@ -215,11 +216,12 @@
             </div>
         </div>
     </section>
+    <button class="btn btn-danger rounded-pill px-4 m-3 fs-2" type="submit" class="button1">Voir les catégories</button>
 
     <!-- FOOTER-->
 
     <footer>
-        
+
     </footer>
 
 
