--- a/index.html
+++ b/index.html
@@ -52,16 +52,16 @@
 
 
     <!-- ARTICLE AVEC CAROUSEL-->
-    <div class="container mt-5 d-flex  align-items-center gx-5" id="article">
+    <div class="container-fluid mt-5 d-flex  align-items-center gx-5" id="article">
         <div class="d-flex justify-content-start">
             <div class="row w-100">
-                <div class="col-lg-7">
+                <div class="col">
                     <h1>NFT MARKETPLACE<br>FOR MANGA</h1>
                     <p class="gx-3">Le futur est à porté de main</p>
-                    <button class="btn btn-danger rounded-pill px-4" type="submit" class="button1">Explore</button>
+                    <button type="submit" class="button1">Explore</button>
                 </div>
             </div>
-            <div class="col-lg-5 mx-auto" class="carou">
+            <div class="col mx-auto" class="carousel">
                 <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-ride="carousel">
                     <div class="carousel-indicators">
                         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0"
@@ -161,7 +161,7 @@
             </div>
         </div>
     </section>
-    <button class="btn btn-danger rounded-pill px-4 m-3 fs-2" type="submit" class="button1">Voir les catégories</button>
+    <button type="submit" class="button1">Voir les catégories</button>
 
 <!--CARD CONTENT 2-->
 
@@ -216,7 +216,7 @@
             </div>
         </div>
     </section>
-    <button class="btn btn-danger rounded-pill px-4 m-3 fs-2" type="submit" class="button1">Voir les catégories</button>
+    <button type="submit" class="button1">Voir les catégories</button>
 
     <!-- FOOTER-->
 
