--- a/index.html
+++ b/index.html
@@ -46,7 +46,12 @@
             </div>
         </nav>
     </header>
-
+    <div class="container bg-secondary mt-5" id="actualite">
+        <div class="row ">
+            <div class="col-4">salut</div>
+            <div class="col-8">Carousel</div>
+        </div>
+    </div>
 
 
     <script src="" async defer></script>
