--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <div class="row w-100">
             <div class="col-1"></div>
             <div class="col-7">
-                <h1>NFT MARKETPLACE<br>FOR MANGA</h1>
+                <h1>NFT MARKETPLACE<br><span class="textChange"></span></h1>
                 <h3>Le futur est à porté de main</h3>
                 <button type="submit" class="button1">Explore</button>
             </div>
@@ -311,7 +311,7 @@
             <div class="col-lg-4 ">
                 <div class="py-5 mx-3">
                     <div class="card" class="cardArticle">
-                        <img class="card-img-top" src="./img/actu2.jpg" alt="Card image cap">
+                        <img class="card-img-top" src="./img/artcile2.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
                             <p class="card-text">Créer votre propre NFT en quelque clic</p>
