--- a/index.html
+++ b/index.html
@@ -133,58 +133,11 @@
         </nav>
     </header>
 
-    <!--CAROUSEL TEST
-    <div class="container mx-auto mt-5 rounded h-50  carouselTest">
-        <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-                    aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-                    aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-                    aria-label="Slide 3"></button>
-            </div>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="./img/sliderlg1.jpg" class="d-block w-100 img-fluid" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>1 slide</h5>
-                        <p>Some representative placeholder content for the first slide.</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="./img/sliderlg1.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Second slide label</h5>
-                        <p>Some representative placeholder content for the second slide.</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="./img/sliderlg3.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Third slide label</h5>
-                        <p>Some representative placeholder content for the third slide.</p>
-                    </div>
-                </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
-        </div>
-    </div>
-    <h1 class="textMobile">NFT MARKETPLACE<br><span class="textChange"></span></h1>-->
-     <!-- ARTICLE AVEC CAROUSEL-->
-     <div class="container-fluid mx-auto d-flex justify-content-center align-items-center gx-lg-3 gx-md-2" id="actualite">
-        <div class="row w-100 gx-lg-3">
+    <!-- ARTICLE AVEC CAROUSEL DESKTOP-->
 
-            <div class="col-lg-6 col-md-3 col-6 ps-5 pt-5 ">
+    <div class="container-fluid mx-auto d-flex justify-content-center align-items-center gx-lg-3 gx-md-2" id="actualite">
+        <div class="row w-100 gx-lg-3 gx-y">
+            <div class="col-lg-6 col-md-6 col-6 ps-5 pt-5 ">
                 <h1>NFT MARKETPLACE<br><span class="textChange"></span></h1>
                 <h3>Le futur est à porté de main</h3>
                 <!--<p>FUTURE est le premier NFT marketplace pour passionné d'animation.
@@ -192,24 +145,25 @@
                     Le futur est à porté de main-->
                 </p>
                 <!--<h3>Le futur est à porté de main</h3>-->
-                <div class="d-flex">
+                <div class="d-flex flex-start">
                     <button type="submit" class="button1">EXPLORE NOW</button>
-                    <div class="ms-3 d-flex align-items-center">How to buy
+                    <div class="ms-3 d-flex align-items-center textActu">How to buy
                     </div>
                 </div>
             </div>
-            <div class="col-lg-2 col-md-3 col-2 d-flex justify-content-center align-items-center">
-                <img src="./img/itachi.webp" class="imgActu1" class="d-block w-100 h-100" alt="...">
+            <div class="col-lg-2 col-md-2 col-2 d-flex justify-content-center align-items-center">
+                <img src="./img/itachi.webp" class="imgActu1" class="d-block " alt="...">
             </div>
-            <div class="col-lg-2 col-md-3 col-2 d-flex justify-content-center align-items-center">
-                <img src="./img/accueil2.jpg" class="imgActu1" class="d-block w-100 h-100" alt="...">
+            <div class="col-lg-2 col-md-2 col-2 d-flex justify-content-center align-items-center">
+                <img src="./img/accueil2.jpg" class="imgActu1" class="d-block" alt="...">
             </div>
-            <div class="col-lg-2 col-md-3  col-2 d-flex justify-content-center align-items-center">
-                <img src="./img/hisoka.jpg" class="imgActu1" class="d-block w-100 h-100" alt="...">
+            <div class="col-lg-2 col-md-2  col-2 d-flex justify-content-center align-items-center">
+                <img src="./img/hisoka.jpg" class="imgActu1" class="d-block" alt="...">
             </div>
         </div>
     </div>
-    <!-- TEST CAROUSEL-->
+
+    <!-- HIDDEN CAROUSEL-->
     <h1 class="textHidden">NFT MARKETPLACE<br><span class="textChange1"></span></h1>
     <div class="container-fluid mx-auto d-flex justify-content-center align-items-center gx-5" id="actualite1">
         <div class="row w-100">
@@ -239,16 +193,6 @@
                     </button>
                 </div>
             </div>
-            <div>
-                <!--<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-s
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-s
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Next</span>
-                    </button>-->
-            </div>
         </div>
     </div>
     </div>
@@ -264,7 +208,7 @@
             <div class="card card1 mx-auto">
                 <img src="./img/card1.jpg" class="card-img-top" alt="Image 1">
                 <div class="card-body">
-                    <h5 class="card-title">My Hero Academia</h5>
+                    <h5 class="card-title">MHA</h5>
                     <div class="card-text d-flex justify-content-between mt-4 align-items-end">
                         <div>
                             <h6>Floor</h6>
@@ -282,7 +226,7 @@
             <div class="card card1 mx-auto">
                 <img src="./img/hisoka.jpg" class="card-img-top" alt="Image 2">
                 <div class="card-body">
-                    <h5 class="card-title">Hunter X Hunter</h5>
+                    <h5 class="card-title">H X H</h5>
                     <div class="card-text d-flex justify-content-between mt-4 align-items-end">
                         <div>
                             <h6>Floor</h6>
@@ -334,9 +278,9 @@
         </div>
         <div class="col-lg-2 col-md-4 col-6">
             <div class="card card1 mx-auto">
-                <img src="./img/nftscissor.jpg" class="card-img-top" alt="Image 5">
+                <img src="./img/card5.png" class="card-img-top" alt="Image 6">
                 <div class="card-body">
-                    <h5 class="card-title">Scissor Seven</h5>
+                    <h5 class="card-title">Neon time</h5>
                     <div class="card-text d-flex justify-content-between mt-4 align-items-end">
                         <div>
                             <h6>Floor</h6>
