--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <header>
         <nav class="navbar navbar-expand-md fixed-top">
             <!-- container -->
-            <div class="container">
+            <div class="container-fluid">
                 <a class="navbar-brand" href="#"><img src="./img/logoFutur-removebg-preview (1).png" alt="Logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
                     <input type='checkbox' id='toggle-menu' />
@@ -139,13 +139,13 @@
                 </div>
             </div>
             <div class="col-lg-2 col-md-2 col-2 d-flex justify-content-center align-items-center">
-                <img src="./img/itachi.webp" class="imgActu1" class="d-block " alt="...">
+                <img src="./img/itachi.webp" class="imgActu1" class="d-block " alt="Itachi de dos, naruto" href="#">
             </div>
             <div class="col-lg-2 col-md-2 col-2 d-flex justify-content-center align-items-center">
-                <img src="./img/accueil2.jpg" class="imgActu1" class="d-block" alt="...">
+                <img src="./img/accueil2.jpg" class="imgActu1" class="d-block" alt="Thorfinn, vinland saga" href="#">
             </div>
             <div class="col-lg-2 col-md-2  col-2 d-flex justify-content-center align-items-center">
-                <img src="./img/hisoka.jpg" class="imgActu1" class="d-block" alt="...">
+                <img src="./img/hisoka.jpg" class="imgActu1" class="d-block" alt="Hisoka, hunter x hunter" href="#">
             </div>
         </div>
     </div>
@@ -422,36 +422,36 @@
 <!--ARTICLE A LIRE -->
 
     <h2 class="mt-5 mb-5 ms-3">Articles</h2>
-    <div class="container-fluid mx-auto my-5">
+    <div class="container-fluid mx-auto my-5 d-md-flex justify-content-md-center">
         <div class="row gy-4 gy-md-0 mt-4 ">
             <div class="col-lg-4 col-md-4 col-12">
-                <div class="py-lg-5 py-md-4 mx-3">
+                <div class="py-lg-5 mx-2">
                     <div class="card card2">
                         <img class="card-img-top" src="./img/actualite1.png" alt="Card image NFT">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Qu'est ce qu'un NFT(non tangible token)?</p>
+                            <h5 class="card-title">#Actu1</h5>
+                            <p class="card-text">Qu'est ce qu'un NFT?</p>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="col-lg-4 col-md-4 col-12">
-                <div class="py-lg-5 mx-3">
+                <div class="py-lg-5 mx-2">
                     <div class="card card2">
                         <img class="card-img-top" src="./img/artcile2.jpg" alt="Card image cap">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
+                            <h5 class="card-title">#Actu2</h5>
                             <p class="card-text">Créer votre propre NFT en quelque clic</p>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="col-lg-4 col-md-4 col-12">
-                <div class="py-lg-5 mx-3">
+                <div class="py-lg-5 mx-2">
                     <div class="card card2">
                         <img class="card-img-top" src="./img/actu5.jpg" alt="Card image cap">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
+                            <h5 class="card-title">#Actu3</h5>
                             <p class="card-text">Guide pour gérer efficacement son wallet</p>
                         </div>
                     </div>
