mode sombre terminer

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- ICON -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-
+    <script defer src="./js/main.js"></script>
 </head>
 
 <body>
@@ -51,7 +51,7 @@
                             <a class="nav-link" href="#">GALLERIE</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><i class="fa-solid fa-moon"></i></a>
+                            <a class="nav-link" href="#">Yo</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -636,8 +636,8 @@
     <footer>
         <div class="container-fluid">
             <div class="row d-flex align-items-center">
-                <div class="col-lg-9 col-md-8 col-sm-12 text-sm-center">
-                    <h2>FUTURE</h2>
+                <div class="col-lg-9 col-md-8 col-sm-12 text-lg-start sombre">
+                    <span>Mode Sombre </span><i class="fa-solid fa-moon changeTheme"></i>
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-12 text-center">
                     <h4>Suivez nous sur les réseaux</h4>
@@ -653,7 +653,7 @@
             <hr>
             <div class="row mt-0 contact">
                 <div class="col-lg-2 col-md-12 col-sm-12">
-                    <p>2018 - 2023, Oktone Network, inc</p>
+                    <span>2018 - 2023, Oktone Network, inc</span>
                 </div>
                 <div class="col-lg-2 col-md-12 col-sm-12">
                     <p>A propos de Future</p>
