--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
     <div class="row mx-auto gy-md-4 gy-sm-5">
         <div class="col-lg-2 col-md-4 col-6">
             <div class="card card1 mx-auto">
-                <img src="./img/card1.jpg" class="card-img-top" alt="Image 1">
+                <img src="./img/Colection du moment/mha.jpg" class="card-img-top" alt="Image 1">
                 <div class="card-body">
                     <h5 class="card-title">MHA</h5>
                     <div class="card-text d-flex justify-content-between mt-4 align-items-end">
@@ -212,9 +212,9 @@
         </div>
         <div class="col-lg-2 col-md-4 col-6">
             <div class="card card1 mx-auto">
-                <img src="./img/hisoka.jpg" class="card-img-top" alt="Image 2">
+                <img src="./img/Colection du moment/link.jpg" class="card-img-top" alt="Image 2">
                 <div class="card-body">
-                    <h5 class="card-title">H X H</h5>
+                    <h5 class="card-title">Zelda</h5>
                     <div class="card-text d-flex justify-content-between mt-4 align-items-end">
                         <div>
                             <h6>Floor</h6>
@@ -266,9 +266,9 @@
         </div>
         <div class="col-lg-2 col-md-4 col-6">
             <div class="card card1 mx-auto">
-                <img src="./img/card5.png" class="card-img-top" alt="Image 6">
+                <img src="./img/Colection du moment/nftscissor.jpg" class="card-img-top" alt="Image 6">
                 <div class="card-body">
-                    <h5 class="card-title">Neon time</h5>
+                    <h5 class="card-title">Scissor Seven</h5>
                     <div class="card-text d-flex justify-content-between mt-4 align-items-end">
                         <div>
                             <h6>Floor</h6>
@@ -284,7 +284,7 @@
         </div>
         <div class="col-lg-2 col-md-4 col-6">
             <div class="card card1 mx-auto">
-                <img src="./img/nftneon6.webp" class="card-img-top" alt="Image 6">
+                <img src="./img/Colection du moment/neon.jpg" class="card-img-top" alt="Image 6">
                 <div class="card-body">
                     <h5 class="card-title">Neon time</h5>
                     <div class="card-text d-flex justify-content-between mt-4 align-items-end">
@@ -310,7 +310,7 @@
     <div class="row mx-auto gy-md-4 gy-sm-5">
         <div class="col-lg-2 col-md-4 col-6">
             <div class="card card1 mx-auto">
-                <img src="./img/card1.jpg" class="card-img-top" alt="Image 1">
+                <img src="./img/naruto/naruto1.jpg" class="card-img-top" alt="Image 1">
                 <div class="card-body">
                     <h5 class="card-title">My Hero Academia</h5>
                     <div class="card-text d-flex justify-content-between mt-4 align-items-end">
@@ -328,7 +328,7 @@
         </div>
         <div class="col-lg-2 col-md-4 col-6">
             <div class="card card1 mx-auto">
-                <img src="./img/hisoka.jpg" class="card-img-top" alt="Image 2">
+                <img src="./img/naruto/naruto2.jpg" class="card-img-top" alt="Image 2">
                 <div class="card-body">
                     <h5 class="card-title">Hunter X Hunter</h5>
                     <div class="card-text d-flex justify-content-between mt-4 align-items-end">
@@ -346,7 +346,7 @@
         </div>
         <div class="col-lg-2 col-md-4 col-6">
             <div class="card card1 mx-auto">
-                <img src="./img/card3.jpg" class="card-img-top" alt="Image 3">
+                <img src="./img/naruto/naruto3.jpg" class="card-img-top" alt="Image 3">
                 <div class="card-body">
                     <h5 class="card-title">Jujustu Kaisen</h5>
                     <div class="card-text d-flex justify-content-between mt-4 align-items-end">
@@ -364,7 +364,7 @@
         </div>
         <div class="col-lg-2 col-md-4 col-6">
             <div class="card card1 mx-auto">
-                <img src="./img/card4.jpg" class="card-img-top" alt="Image 4">
+                <img src="./img/naruto/naruto4.jpg" class="card-img-top" alt="Image 4">
                 <div class="card-body">
                     <h5 class="card-title">Psycho pass</h5>
                     <div class="card-text d-flex justify-content-between mt-4 align-items-end">
@@ -382,7 +382,7 @@
         </div>
         <div class="col-lg-2 col-md-4 col-6">
             <div class="card card1 mx-auto">
-                <img src="./img/nftscissor.jpg" class="card-img-top" alt="Image 5">
+                <img src="./img/naruto/naruto5.jpg" class="card-img-top" alt="Image 5">
                 <div class="card-body">
                     <h5 class="card-title">Scissor Seven</h5>
                     <div class="card-text d-flex justify-content-between mt-4 align-items-end">
@@ -400,7 +400,7 @@
         </div>
         <div class="col-lg-2 col-md-4 col-6">
             <div class="card card1 mx-auto">
-                <img src="./img/nftneon6.webp" class="card-img-top" alt="Image 6">
+                <img src="./img/naruto/naruto6.jpg" class="card-img-top" alt="Image 6">
                 <div class="card-body">
                     <h5 class="card-title">Neon time</h5>
                     <div class="card-text d-flex justify-content-between mt-4 align-items-end">
