--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                             <a class="nav-link" href="#">GALLERIE</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Yo</a>
+                            <a class="nav-link" href="./login.html">LOGIN</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
