réglagle pb darkmode et ajustement footer

--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
                     <!-- ms-auto -->
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">DASHBOARD</a>
+                            <a class="nav-link active" aria-current="page" href="#">GALERIE</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">WALLET</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">GALLERIE</a>
+                            <a class="nav-link" href="#">GALERIE</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./login.html">LOGIN</a>
@@ -56,15 +56,15 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
-                                INSCRIPTION
+                                GALERIE
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">MESSAGE</a></li>
-                                <li><a class="dropdown-item" href="#">NEWS</a></li>
+                                <li><a class="dropdown-item" href="#">COLLECTION</a></li>
+                                <li><a class="dropdown-item" href="#">NFT</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="#">CANDIDATURE</a></li>
+                                <li><a class="dropdown-item" href="#">FUTURE PRO</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -84,30 +84,28 @@
                     <div class="modal-body">
                         <!-- ms-auto -->
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                            
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#"><i class="fas fa-home"></i> HOME</a>
+                                <a class="nav-link" href="#"><i class="fa-solid fa-wallet"></i> WALLET</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#"><i class="fas fa-users"></i> ABOUT</a>
+                                <a class="nav-link" href="#"><i class="fas fa-folder-open"></i> GALERIE</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#"><i class="fas fa-folder-open"></i> CASES</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#"><i class="fas fa-tags"></i> PRICING</a>
+                                <a class="nav-link" href="#"><i class="fa-solid fa-user"></i> LOGIN</a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                                     data-bs-toggle="dropdown" aria-expanded="false">
-                                    <i class="fas fa-reply-all"></i> CONTACT
+                                    <i class="fa-solid fa-panorama"></i> GALERIE
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <li><a class="dropdown-item" href="#">MESSAGE</a></li>
-                                    <li><a class="dropdown-item" href="#">NEWSLETTER</a></li>
+                                    <li><a class="dropdown-item" href="#">COLLECTION</a></li>
+                                    <li><a class="dropdown-item" href="#">NFT</a></li>
                                     <li>
                                         <hr class="dropdown-divider">
                                     </li>
-                                    <li><a class="dropdown-item" href="#">WORK WITH US</a></li>
+                                    <li><a class="dropdown-item" href="#">FUTURE PRO</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -652,7 +650,7 @@
             </div>
             <hr>
             <div class="row mt-0 contact">
-                <div class="col-lg-2 col-md-12 col-sm-12">
+                <div class="col-lg-2 col-md-12 col-sm-12 credit">
                     <span>2018 - 2023, Oktone Network, inc</span>
                 </div>
                 <div class="col-lg-2 col-md-12 col-sm-12">
