--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@500&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- ICON -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <script defer src="./js/main.js"></script>
@@ -246,7 +246,7 @@
         </div>
         <div class="col-lg-2 col-md-4 col-6">
             <div class="card card1 mx-auto">
-                <img src="./img/card4.jpg" class="card-img-top" alt="Image 4">
+                <img src="./img/Colection du moment/psychopass.jpg" class="card-img-top" alt="Image 4">
                 <div class="card-body">
                     <h5 class="card-title">Psycho pass</h5>
                     <div class="card-text d-flex justify-content-between mt-4 align-items-end">
@@ -460,7 +460,7 @@
 
 <!--TABLEAU -->
 
-    <div class="container tableCollection mt-5">
+    <!-- <div class="container tableCollection mt-5">
     <table class="table align-middle rounded mb-0">
         <thead>
           <tr>
@@ -627,7 +627,7 @@
           </tr>
         </tbody>
       </table>
-    </div>
+    </div> -->
 
 <!-- FOOTER-->
 
