--- a/profil.html
+++ b/profil.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <!-- <nav class="navbar navbar-expand-md fixed-top">
+    <nav class="navbar navbar-expand-md fixed-top">
             
             <div class="container-fluid">
                 <a class="navbar-brand" href="#"><img src="./img/logoFutur-removebg-preview (1).png" alt="Logo"></a>
@@ -107,7 +107,7 @@
                 </div>
             </div>
         </div>
-    </header> -->
+    </header>
     <div class="container-fluid">
         <div class="row flex-nowrap">
             <div class="col-auto col-xl-2 col-md-2 col-sm-2 sidebar">
@@ -180,8 +180,8 @@
                     <h2>Détails du profil</h2>
                     <hr>
                 <div class="form-group">
-                    <label for="exampleFormControlFile1">Modifier la photo</label>
-                    <input type="file" class="form-control-file" id="exampleFormControlFile1">
+                    <label for="exampleFormControlFile1">Modifier la photo</label><br>
+                    <input type="file" class="form-control-file">
                   </div><br>
 
 
@@ -237,7 +237,7 @@
                     <label for="inputPassword5" class="form-label">Confirmer nouveau mot de passe</label>
                     <input type="password" id="inputPassword5" class="form-control" aria-describedby="passwordHelpBlock">
                 </div><br>
-                <button type="submit" class="btn btn-primary">Primary</button>
+                <button type="submit" class="btn mx-auto">Sauvegarder les modifications</button>
                 </form>
 
                 </div>
