--- a/galerie.html
+++ b/galerie.html
@@ -9,6 +9,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="galerie.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css" integrity="sha512-ZnR2wlLbSbr8/c9AgLg3jQPAattCUImNsae6NHYnS9KrIwRdcY9DxFotXhNAKIKbAXlRnujIqUWoXXwqyFOeIQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script defer src="./js/galerie.js" async></script>
 </head>
@@ -109,12 +110,13 @@
     </header>
 
     <div class="test">
-        <div>Galerie</div>
+        <div>Collection</div>
         <select name="" id="filtre" onchange="majFiltre(this)">
             <option value="spaceElement">Tout afficher</option>
-            <option value="Ombre">Ombre</option>
-            <option value="naruto">Naruto</option>
-            <option value="paysages">Paysage</option>
+            <option value="Clasique">Ombre</option>
+            <option value="Naruto">Naruto</option>
+            <option value="Link">Zelda</option>
+            <option value="HXH">HxH</option>
         </select>
     </div>
     <!-- <div id="zone1">
