--- a/index.html
+++ b/index.html
@@ -41,14 +41,17 @@
                 <div class="collapse navbar-collapse">
                     <!-- ms-auto -->
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                        <li>
+                            <input type="search" id="form1" class="form-control" placeholder="Rechercher collection,NFT,....">
+                        </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">GALERIE</a>
+                            <a class="nav-link active" aria-current="page" href="./profil.html">PROFIL</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">WALLET</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">GALERIE</a>
+                            <a class="nav-link" href="./galerie.html">GALERIE</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./login.html">LOGIN</a>
@@ -72,6 +75,8 @@
             </div>
         </nav>
 
+
+        
 <!-- MODAL NAVBAR -->
 
         <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
@@ -161,10 +166,10 @@
                             <img src="./img/itachi.webp" class="imgActu" class="d-block" alt="...">
                         </div>
                         <div class="carousel-item" data-bs-interval="5000">
-                            <img src="./img/hisoka.jpg" class="imgActu" class="d-block" alt="...">
+                            <img src="./img/accueil2.jpg" class="imgActu" class="d-block" alt="...">
                         </div>
                         <div class="carousel-item" data-bs-interval="5000">
-                            <img src="./img/hxh.webp" class="imgActu" class="d-block" alt="...">
+                            <img src="./img/hisoka.jpg" class="imgActu" class="d-block" alt="...">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button"
@@ -186,7 +191,7 @@
 
 
 <!-- CARD CONTENT -->
-
+<div class="scrollHigth"><i class="fa-solid fa-chevron-up"></i></div>
     <h2 class="mb-5 ms-3">Sélection du moment</h2>
 
     <div class="row mx-auto gy-md-4 gy-sm-5">
@@ -422,7 +427,7 @@
     <h2 class="mt-5 mb-5 ms-3">Articles</h2>
     <div class="container-fluid mx-auto my-5 d-md-flex justify-content-md-center">
         <div class="row gy-4 gy-md-0 mt-4 ">
-            <div class="col-lg-4 col-md-4 col-12">
+            <div class="col-lg-4 col-md-4 col-10 mx-auto">
                 <div class="py-lg-5 mx-2">
                     <div class="card card2">
                         <img class="card-img-top" src="./img/actualite1.png" alt="Card image NFT">
@@ -433,7 +438,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-4 col-12">
+            <div class="col-lg-4 col-md-4 col-10 mx-auto">
                 <div class="py-lg-5 mx-2">
                     <div class="card card2">
                         <img class="card-img-top" src="./img/artcile2.jpg" alt="Card image cap">
@@ -444,7 +449,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-4 col-12">
+            <div class="col-lg-4 col-md-4 col-10 mx-auto">
                 <div class="py-lg-5 mx-2">
                     <div class="card card2">
                         <img class="card-img-top" src="./img/actu5.jpg" alt="Card image cap">
@@ -628,7 +633,21 @@
         </tbody>
       </table>
     </div> -->
-
+    <div class="container-fluid py-5" id="actualite">
+        <div class="row">
+            <div class="col-2"></div>
+            <div class="col-4"><img src="./img/hisoka.jpg"></div>
+            <div class="col-4">
+                <h3>MINTING NOW</h3>
+                <h2>ANON KATZ</h2>
+                <div>bt profilverifie on etherum</div>
+                <div>A curious group of znon katz</div>
+                <button>Mint for free</button>
+                <div>temps restant day heure minutes secondes</div>
+            </div>
+            <div class="col-2"></div>
+        </div>
+    </div>
 <!-- FOOTER-->
 
     <footer>
@@ -654,7 +673,7 @@
                     <span>2018 - 2023, Oktone Network, inc</span>
                 </div>
                 <div class="col-lg-2 col-md-12 col-sm-12">
-                    <p>A propos de Future</p>
+                    <a href="./presentation.html"><p>A propos de Future</p></a>
                 </div>
                 <div class="col-lg-2 col-md-12 col-sm-12">
                     <p>Politique<br>de confidentialité</p>
