ajout d'une session

--- a/index.html
+++ b/index.html
@@ -633,19 +633,38 @@
         </tbody>
       </table>
     </div> -->
-    <div class="container-fluid py-5" id="actualite">
+
+
+    <div class="container-fluid py-5" id="actualite" class="changeCollection">
         <div class="row">
             <div class="col-2"></div>
-            <div class="col-4"><img src="./img/hisoka.jpg"></div>
-            <div class="col-4">
-                <h3>MINTING NOW</h3>
-                <h2>ANON KATZ</h2>
-                <div>bt profilverifie on etherum</div>
-                <div>A curious group of znon katz</div>
-                <button>Mint for free</button>
-                <div>temps restant day heure minutes secondes</div>
+            <div class="col-8 d-flex flex-row justify-content-between"><div class="flex-start"><img src="./img/naruto.gif" class="gif"> DIVIDEND</div>
+            <div class="flex-end">by <img src="./img/naruto.gif" class="user"></img> forexus</div>
             </div>
             <div class="col-2"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-2"></div>
+            <div class="col-4 changeImg"><img src="./img/hisoka.jpg"></div>
+            <div class="col-4">
+                <h3 class="changeTitle">MINTING NOW</h3>
+                <h2 class="changeTitle2">ANON KATZ</h2>
+                <div class="changeText">bt profilverifie on etherum<br>
+                A curious group of znon katz</div>
+                <button>Explore</button>
+                <div class="timer">temps restant day heure minutes secondes</div>
+            </div>
+            <div class="col-2 changeFleche">
+                <i class="fa-solid fa-chevron-right"></i>
+            </div>
+
+            <div class="row">
+                <div class="col-12 mx-auto d-flex flex-row justify-content-center">
+                    <div class="buttonSlider"></div>
+                    <div class="buttonSlider"></div>
+                </div>
+            </div>
         </div>
     </div>
 <!-- FOOTER-->
