rajout event click carousel

--- a/index.html
+++ b/index.html
@@ -635,34 +635,35 @@
     </div> -->
 
 
-    <div class="container-fluid py-5" id="actualite" class="changeCollection">
-        <div class="row">
+    <div class="container-fluid py-5" id="actualite2" class="changeCollection">
+        <div class="row mb-3">
             <div class="col-2"></div>
-            <div class="col-8 d-flex flex-row justify-content-between"><div class="flex-start"><img src="./img/naruto.gif" class="gif"> DIVIDEND</div>
-            <div class="flex-end">by <img src="./img/naruto.gif" class="user"></img> forexus</div>
+            <div class="col-8 d-flex flex-row justify-content-between"><div class="flex-start"><img src="./img/profil/naruto.gif" class="gif"> DIVIDEND</div>
+            
             </div>
             <div class="col-2"></div>
         </div>
 
         <div class="row">
             <div class="col-2"></div>
-            <div class="col-4 changeImg"><img src="./img/hisoka.jpg"></div>
+            <div class="col-4 changeImg"><img src="./img/profil/itachi2.png"></div>
             <div class="col-4">
                 <h3 class="changeTitle">MINTING NOW</h3>
                 <h2 class="changeTitle2">ANON KATZ</h2>
                 <div class="changeText">bt profilverifie on etherum<br>
-                A curious group of znon katz</div>
-                <button>Explore</button>
+                A curious group of znon katz</div><br>
+                <div class="flex-end changeText">by <img src="./img/Profil/michael-dam-mEZ3PoFGs_k-unsplash.jpg" class="user"></img> forexus</div><br>
+                <button class="buttonCategorie">Explore</button><br>
                 <div class="timer">temps restant day heure minutes secondes</div>
             </div>
-            <div class="col-2 changeFleche">
-                <i class="fa-solid fa-chevron-right"></i>
+            <div class="col-2">
             </div>
 
             <div class="row">
                 <div class="col-12 mx-auto d-flex flex-row justify-content-center">
-                    <div class="buttonSlider"></div>
-                    <div class="buttonSlider"></div>
+                    <div class="buttonSlider point1"></div>
+                    <div class="buttonSlider point2"></div>
+                    <div class="buttonSlider point3"></div>
                 </div>
             </div>
         </div>
@@ -692,7 +693,7 @@
                     <span>2018 - 2023, Oktone Network, inc</span>
                 </div>
                 <div class="col-lg-2 col-md-12 col-sm-12">
-                    <a href="./presentation.html"><p>A propos de Future</p></a>
+                    <a href="./presentation.html" class="aPropos"><p>A propos de Future</p></a>
                 </div>
                 <div class="col-lg-2 col-md-12 col-sm-12">
                     <p>Politique<br>de confidentialité</p>
