modification bouton et ajout ombre card

--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@
     <div class="container-fluid py-5" id="actualite2" class="changeCollection">
         <div class="row mb-3">
             <div class="col-2"></div>
-            <div class="col-8 d-flex flex-row justify-content-between"><div class="flex-start"><img src="./img/profil/naruto.gif" class="gif"> DIVIDEND</div>
+            <div class="col-8 d-flex flex-row justify-content-between"><div class="flex-start nomCollection"><img src="./img/profil/naruto.gif" class="gif"> DIVIDEND</div>
             
             </div>
             <div class="col-2"></div>
@@ -648,13 +648,13 @@
             <div class="col-2"></div>
             <div class="col-4 changeImg"><img src="./img/profil/itachi2.png"></div>
             <div class="col-4">
-                <h3 class="changeTitle">MINTING NOW</h3>
+                <h3 class="changeTitle">LOREM IPSU <i class="bi bi-patch-check-fill"></i></h3>
                 <h2 class="changeTitle2">ANON KATZ</h2>
-                <div class="changeText">bt profilverifie on etherum<br>
-                A curious group of znon katz</div><br>
+                <div class="changeText">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua</div><br>
                 <div class="flex-end changeText">by <img src="./img/Profil/michael-dam-mEZ3PoFGs_k-unsplash.jpg" class="user"></img> forexus</div><br>
                 <button class="buttonCategorie">Explore</button><br>
-                <div class="timer">temps restant day heure minutes secondes</div>
+                <div class="timer"></div>
             </div>
             <div class="col-2">
             </div>
@@ -668,13 +668,14 @@
             </div>
         </div>
     </div>
+
 <!-- FOOTER-->
 
     <footer>
         <div class="container-fluid">
             <div class="row d-flex align-items-center">
                 <div class="col-lg-9 col-md-8 col-sm-12 text-lg-start sombre">
-                    <span>Mode Sombre </span><i class="fa-solid fa-moon changeTheme"></i>
+                    <span>Dark Mode </span><i class="fa-solid fa-moon changeTheme"></i>
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-12 text-center">
                     <h4>Suivez nous sur les réseaux</h4>
@@ -716,7 +717,7 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous">
     </script>
-    
+
 </body>
 
 </html>
